Correcion de errores en logica
